Add pho image, ingredients and steps

--- a/recipes/pho.html
+++ b/recipes/pho.html
@@ -6,5 +6,23 @@
     </head>
     <body>
         <h1>This is pho</h1>
+        <img src="/images/pho.webp">
+        <h2>One of the best pho in HCMC. It is also the famous engineer Tung favorite pho.
+             It tastes good, and expensive.
+        </h2>
+        <h2> Ingredients </h2>
+        <ul>
+            <li>Beef</li>
+            <li>Pho noodles</li>
+            <li>Green onions</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+           <li>Go to 415 Nguyen Trai, 5th District, HCMC</li> 
+           <li>Get to your table, tell the server "Cho 1 to pho bo tai"</li>
+           <li>Wait about 3-5 minutes to get your bow of pho</li>
+           <li>Eat</li>
+           <li>Pay (optional) </li>
+        </ol>
     </body>
 </html>
