--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Odin recipes</h1>
-        <a href="/recipes/pho.html" rel="noreferrer">Pho</a>
+        <ul>
+        <li><a href="./recipes/pho.html" rel="noreferrer">Pho</a></li>
+        </ul>
     </body>
 </html>
